# Project-V

./: .env.dev  .env.local  .env.prod  .gitignore  Dockerfile  alembic.ini  debug_supabase_connection.py  dev_database.db  docker-compose.yml  download_models.py  main.py  pyproject.toml  requirements.txt  run.py  test_api.ps1  test_enrichment.py  test_import.py  txt
Test/: sklearn,py
alembic/: env.py
app/: exceptions.py  main.py
app/agents/: s5_search_agent.py
app/api/: collect.py  dependencies.py  enrichment.py  health.py  metrics.py  search.py
app/api/v1/routes/: search_routes.py
app/api/v1/schemas/: search_schema.py
app/config/: base.py
app/connectors/: base_connector.py  instagram_connector.py  youtube_connector.py
app/database/: model.py  models.py  session.py
app/domains/search/: repository.py  schemas.py  service.py
app/frontend/: index.html
app/frontend/assets/css/: style.css
app/frontend/assets/js/: app.js  creator-analytics.js
app/middleware/: error_handler.py  metrics_middleware.py
app/scripts/: test_db_connection.py
app/services/: enrichment_service.py
app/tests/: test_instagram_connector.py
app/utils/: logging_config.py  metrics.py
project_oracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: create_tables.py  generate_embeddings.py
